tests/codegen/errors/reader/tests-infix-calls/atom.reader.error.reader.literal.call.number/reader-literal-call-number.mon
;; TEST-ID: tests.codegen.reader-error.reader-literal-call-number
;; TEST-TIER: regression
;; TEST-STATUS: passing-baseline-2026-06-15
;; TEST-SECTION: codegen
;; TEST-CATEGORY: 90-diagnostics
;; TEST-SUBSET: reader-errors/tests-infix-calls
;; TEST-CONTEXT: monadc.context.language.codegen-branch-coverage, monadc.context.language.codegen-atom-web, monadc.context.language.reader-error-coverage
;; TEST-PURPOSE: Trigger and pin diagnostic: is a number literal and cannot be called as a function
;; TEST-ATOM: atom.reader.error.reader.literal.call.number
;; TEST-CODEGEN-ATOM: atom.reader.error.reader.literal.call.number
;; TEST-QUALITY: diagnostic-branch-regression
;; TEST-EXPECT: fail:compile
;; TEST-READER-ERROR: is a number literal and cannot be called as a function
;; TEST-READER-PATH: reader.c:1 parser.literal-call
;; TEST-CODEGEN-PATH: diagnostic.parser.literal-call
;; TEST-TAG: fail
;; TEST-TAG: diagnostic
;; TEST-TAG: reader
;; TEST-COVERAGE: reader.c:1 is a number literal and cannot be called as a function
;; TEST-USES-ATOM: atom.reader.error.reader.literal.call.number
;; TEST-USES-ATOM: atom.codegen.category.90.diagnostics
;; TEST-USES-ATOM: atom.reader.error
;; TEST-USES-ATOM: atom.reader.error.family.parser.literal.call
;; TEST-REFINES: atom.codegen.category.90.diagnostics
;; TEST-REFINES: atom.reader.error
;; TEST-MENU: errors/reader/tests-infix-calls/atom.reader.error.reader.literal.call.number
;; TEST-MENU-PATH: codegen/errors/reader/tests-infix-calls/atom.reader.error.reader.literal.call.number
;; TEST-ATOM-LEAF: atom.reader.error.reader.literal.call.number
;; TEST-CLI-TARGET: codegen errors reader tests-infix-calls

(module Main)
(show (1 2))
